--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <link rel="icon" href="https://image.shutterstock.com/image-photo/have-no-idea-maybe-portrait-260nw-1775099147.jpg">
+    <html lang="en">
+    <head>
+        <title>Yes or No?</title>
+    </head>
     <style>
         .center {
             position: absolute;
